--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -32,7 +32,7 @@ html {
   max-width: 1280px;
   margin: 0 auto;
   padding: 24px;
-  background-color: #fff;
+  background-color: #f1f1f1;
   border-left: thin solid #e1e1e1;
   border-right: thin solid #e1e1e1;
 }
