--- a/src/styles/partials/_params.scss
+++ b/src/styles/partials/_params.scss
@@ -2,6 +2,7 @@ $white: #ffffff;
 $black: #000000;
 $gray-blue-hover: #F8FAFB;
 $gray-blue-border: #E0E8F0;
+$gray-blue-border-hover: #cfd9e3;
 $darkblue: #2A3F64;
 $blue: #3F6ADA;
 $blue2: #4672E3;
