--- a/src/styles/partials/_params.scss
+++ b/src/styles/partials/_params.scss
@@ -6,8 +6,11 @@ $gray-blue-border-hover: #cfd9e3;
 $darkblue: #2A3F64;
 $blue: #3F6ADA;
 $blue2: #4672E3;
+
 $red: #ff2c2c;
 $red2: #FF6C59;
+$red-background: #fff1f0;
+
 $yellow: #FFDD00;
 $green: #A2E118;
 $green2: #b2e641;
